# shopxo

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
mt4-copier/src/ea-scripts/: CopierEA.mq4
native/: CMakeLists.txt
native/src/: addon.cpp  engine.cpp  engine.h
src/main/: index.ts
src/preload/: index.ts
src/renderer/: index.html
